--- a/templates/index.html
+++ b/templates/index.html
@@ -195,7 +195,7 @@
 	<!-- Header -->
 <header class="bg-primary text-center py-5 mb-4">
 	<div class="container">
-	  <h1 class="font-weight-light text-white">Waste Detection using YOLOv5</h1>
+	  <h1 class="font-weight-light text-white">FRUITS AND VEGETABLE DETECTION</h1>
 	</div>
   </header>
   
